--- a/templates/customer.html
+++ b/templates/customer.html
@@ -25,6 +25,18 @@
 </div>
 
 <div class="container mt-4 mb-5">
+
+
+       {% if messages %}
+        <div class="alert-container">
+            {% for message in messages %}
+                <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+                    {{ message }}
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+            {% endfor %}
+        </div>
+    {% endif %}
 <form method="POST" class="card shadow">
     {% csrf_token %}
 
@@ -40,7 +52,6 @@
         <div class="col-md-6">
             <label class="form-label">Age Range</label>
             <select class="form-select" name="age_range" required>
-                <option>Under 18</option>
                 <option>18–25</option>
                 <option>26–35</option>
                 <option>36–45</option>
@@ -50,10 +61,8 @@
         <div class="col-md-6">
             <label class="form-label">Gender</label>
             <select class="form-select" name="gender">
-                <option>Prefer not to say</option>
                 <option>Male</option>
                 <option>Female</option>
-                <option>Other</option>
             </select>
         </div>
         <div class="col-md-6">
