--- a/templates/home.html
+++ b/templates/home.html
@@ -17077,6 +17077,15 @@
                       >
                 
                     </li>
+
+                          <li class="menu-item">
+                      <a
+                        href="/admin/"
+    
+                        >Admin</a
+                      >
+                
+                    </li>
                   </ul>
                 </div>
               </div>
@@ -17289,8 +17298,8 @@
                         data-stylerecorder="true"
                         data-initialised="true"
                       >
-                        Applying Data Science<br />
-                        &amp; Analytics To Life
+                    Sentiment-Driven<br />
+                        &amp; for Fast Food Analytics System
                       </h2></rs-mask-wrap
                     ></rs-loop-wrap
                   ></rs-layer-wrap
@@ -17375,9 +17384,9 @@
                         data-stylerecorder="true"
                         data-initialised="true"
                       >
-                        It is a long established fact that a reader will be
+                       An Intelligent Platform for Fast Food Analytics
                         <br />
-                        distracted by the readable content .
+               and Sentiment Evaluation.
                       </p></rs-mask-wrap
                     ></rs-loop-wrap
                   ></rs-layer-wrap
@@ -19202,9 +19211,7 @@
                 <span class="title-design">About us</span>
                 <h2>Focused on Actionable Insights</h2>
                 <p>
-                  It is a long established fact that a reader will be distracted
-                  by the of readable content of a page when looking at its
-                  layout.
+                 Enhancing Business Decisions Through AI-Based Sentiment Analysis.
                 </p>
               </div>
               <div class="text-left">
